[project]
name = "scrapy-cnblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy==2.16.0",
    "scrapy-playwright==0.0.47",
    "playwright==1.52.0",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "lxml==6.0.4",
    "pytz==2026.2",
    "itemadapter==0.13.1",
    "itemloaders==1.3.2",
    "Pillow==11.2.1",
    "tldextract==5.3.1",
    "redis==6.4.0",
    "typing_extensions==4.14.1",
    "scrapy-fake-useragent>=1.4.4",
]
